envoy/sidecar-envoy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask-app-envoy-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: flask-app-envoy    
  template:
    metadata:
      labels:
        app: flask-app-envoy 
    spec:
      containers:
      - name: flask-app-envoy
        image: senlinzhan/flask-app-envoy:v0.1
        ports:
        - containerPort: 80
