envoy/sidecar-envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-envoy-service
  labels:
    name: flask-app-envoy-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: flask-app-envoy
